athena-eks-nonprod-sites/test-multi-winchester/commanddistributor.yaml
apiVersion: v1
kind: Service
metadata:
  name: commanddistributor
  labels:
    svc: commanddistributor
spec:
  selector:
    app: commanddistributor
  ports:
  - protocol: TCP
    port: 9091
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commanddistributor
  labels:
    name: commanddistributor
    scheduling: vn
  annotations:
    prometheus.io/path: "/actuator/prometheus"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commanddistributor
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: commanddistributor
        app: commanddistributor
    spec:
      nodeSelector:
        nodeType: scheduling-vn
      tolerations:
      - effect: NoSchedule
        operator: Equal
        key: scheduling
        value: vn
      containers:
      - image: 696952606624.dkr.ecr.us-east-2.amazonaws.com/athena/command-distributor:1.46.3
        name: commanddistributor
        imagePullPolicy: Always
        command: ["/bin/sh", "-c"]
        args:
          - >-
            . /home/athena/athena.env && java
            -Dmanagement.context-path=/
            -Dmanagement.endpoints.web.base-path=/
            -Dmanagement.endpoints.web.exposure.include="*"
            -Dtenant.id=${TENANT_ID}
            -Dtenant.name=${TENANT}
            -Dserver.port=9091
            -Dspring.kafka.consumer.bootstrap-servers=${ATHENA_KAFKA_CONSUMERS}
            -Dkafka.consume-from.tenant-change.topic=tenantSettings-p01usw2demo
            -Dspring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/Athena
            -Dspring.datasource.username=${DB_USER}
            -Dspring.datasource.password=${DB_PASS}
            -jar -XX:+UseG1GC -Xms256m -Xmx512m /home/athena/app.jar
        ports:
        - name: http
          containerPort: 9091
          protocol: TCP
        volumeMounts:
        - mountPath: /home/athena/athena.env
          name: athenaenv
          subPath: athena.env
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1Gi
      volumes:
        - name: athenaenv
          configMap:
            defaultMode: 420
            name: release
      restartPolicy: Always
