athena-eks-nonprod-sites/test-multi-winchester/plannedrolloverservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: plannedrolloverservice
  labels:
    svc: plannedrolloverservice
spec:
  selector:
    app: plannedrolloverservice
  ports:
  - protocol: TCP
    port: 8100
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plannedrolloverservice
  labels:
    name: plannedrolloverservice
    scheduling: vn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plannedrolloverservice
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: plannedrolloverservice
        app: plannedrolloverservice
    spec:
      nodeSelector:
        nodeType: scheduling-vn
      tolerations:
      - effect: NoSchedule
        operator: Equal
        key: scheduling
        value: vn
      containers:
      - image: 696952606624.dkr.ecr.us-east-2.amazonaws.com/athena/plannedrolloverservice:1.46.3
        name: plannedrolloverservice
        command: ["/bin/sh", "-c"]
        args: 
        - >
          . /home/athena/athena.env && java
          -Dspring.profiles.active=eks
          -Dmanagement.context-path=/
          -Dmanagement.endpoints.web.base-path=/
          -Dmanagement.endpoints.web.exposure.include="*"
          -Dtenantconfig.api.url=https://athenagateway-p01-demo.usw2.karrostech.net/api/
          -Dkarros.api.key=9d6c3f85669a40cd1b1fa4635b049b92bb04c881
          -Dathena.tenant.id=${TENANT_ID}
          -jar -XX:+UseG1GC -Xms256m -Xmx512m /home/athena/app.jar
        ports:
        - containerPort: 8100
          name: plannedrollover
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - mountPath: /home/athena/athena.env
          name: athenaenv
          subPath: athena.env
        imagePullPolicy: Always
      volumes:
        - name: athenaenv
          configMap:
            defaultMode: 420
            name: release
      restartPolicy: Always
