athena-eks-nonprod-sites/test-multi-winchester/internal-ingress-athena.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-midland-server-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: multi-winchester.eks-dev.athena-nonprod.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: routingservice
            port:
              number: 8081
